--- a/index.html
+++ b/index.html
@@ -130,32 +130,32 @@
             <div class="contact-content">
                 <p class="contact-description">Feel free to reach out to me for collaborations or just a friendly hello!</p>
                 <div class="contact-links">
-                    <a href="https://linkedin.com/in/yourprofile" class="contact-card" target="_blank">
+                    <a href="https://linkedin.com/in/tashan-appuhami-7b2518372" class="contact-card" target="_blank">
                         <i class="fab fa-linkedin"></i>
                         <div>
                             <h3>LinkedIn</h3>
                             <p>Connect with me</p>
                         </div>
                     </a>
-                    <a href="https://github.com/yourprofile" class="contact-card" target="_blank">
+                    <a href="https://github.com/TashanAppuhami" class="contact-card" target="_blank">
                         <i class="fab fa-github"></i>
                         <div>
                             <h3>GitHub</h3>
                             <p>View my repositories</p>
                         </div>
                     </a>
-                    <a href="mailto:your.email@example.com" class="contact-card">
+                    <a href="mailto:appuhamitashan@gmail.com" class="contact-card">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>your.email@example.com</p>
+                            <p>appuhamitashan@gmail.com</p>
                         </div>
                     </a>
                     <a href="tel:+1234567890" class="contact-card">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h3>Phone</h3>
-                            <p>+1 (234) 567-8900</p>
+                            <p>+94 070 110 1219</p>
                         </div>
                     </a>
                 </div>
