Update technical skills section in portfolio to reflect new expertise in SpringBoot and Angular

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     <h3>Technical Skills</h3>
                     <div class="skills-grid">
                         <div class="skill-tag">JavaScript</div>
-                        <div class="skill-tag">React</div>
-                        <div class="skill-tag">Python</div>
+                        <div class="skill-tag">SpringBoot</div>
+                        <div class="skill-tag">Angular</div>
                         <div class="skill-tag">Java</div>
                         <div class="skill-tag">HTML & CSS</div>
-                        <div class="skill-tag">Node.js</div>
+                        <div class="skill-tag">JavaFX</div>
                         <div class="skill-tag">SQL</div>
                         <div class="skill-tag">Git</div>
                     </div>
